--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta name="viewport" content="width=device-width, intitial-scale=1.0">
-  <title>Title</title>
+  <title>Profitonal player</title>
   <style>
 body {
 text-align: center;
@@ -34,8 +34,13 @@ color: white;
  </head>
 <body>
   <img src="http://i0.kym-cdn.com/entries/icons/original/000/020/776/messi.jpg">
-<h1>ZIAD MAHMOUD</h1>
- <p> Hi! My name is Ziad and i am a football player. </p>
-<input type="email" placeholder="Your email">
-<input type="submit">
+<h1>Lionil Messi</h1>
+ <p> Hi! My name is Messi and i am a football player. </p>
+
+  
+  <form action="https://formspree.io/ziadelbadry20@gmail.com" method="POST">
+    <input type="email" placeholder="Your email" name="_replyto" >
+    <input type="submit" value="Send">
+  </form>
+  
 </body>
